<resources>
    <string name="app_name">ArtChart</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ArtChart</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Nav Bar -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_addArt">Add Art</string>
    <string name="menu_profile">Profile</string>

    <!-- ArtInfoActivity -->
    <string name="artist_date_format">%1$s | %2$s</string>

    <!-- SearchFragment -->
    <string name="search_hint">Search Here</string>
    <string name="order_by_text">Order by…</string>
    <string name="filter_name">Name</string>
    <string name="filter_dist">Distance</string>
    <string name="filter_reviews">Reviews</string>
    <string name="filter_years">Year</string>
    <string name="lat_lng_format">%1$.2f, %2$.2f</string>
    <string name="total_reviews_format">(%1$s)</string>

    <!-- AddArtFragment -->
    <string name="choose_photo">Select Photo</string>
    <string name="submit_art">Submit</string>

    <!-- ProfileFragment -->
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="reviewed_artwork">Reviewed Artwork</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>

    <!-- Confirm Credentials Dialog -->
    <string name="confirm_credentials">Confirm Credentials</string>
    <string name="confirm_credentials_message">For security reasons, please re-enter your existing credentials.</string>

    <!-- ChangeUsernameDialog -->
    <string name="new_username">New Username</string>

    <!-- ChangeEmailDialog -->
    <string name="new_email">New Email</string>

    <!-- ChangePasswordDialog -->
    <string name="new_password">New Password</string>

    <!-- SignUp/SignIn Activities -->
    <string name="sign_up_for_art_chart">Sign Up for ArtChart</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_to_art_chart">Sign In to ArtChart</string>
    <string name="sign_in">Sign In</string>
    <string name="show_password">Show Password</string>

    <!-- Common View Texts -->
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
</resources>