<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/verify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="8dp"/>

    <CheckBox
        android:id="@+id/show_password_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"/>

</LinearLayout>