<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragment"
    android:layout_marginTop="10dp">

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search Here"
        android:iconifiedByDefault="false"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_by_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/filterNameButton"
                android:layout_marginEnd="3dp"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"
                android:text="@string/filter_name"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/filterDistanceButton"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"
                android:text="@string/filter_dist"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/filterRatingsButton"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"
                android:text="@string/filter_ratings"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/filterYearButton"
                android:layout_marginStart="3dp"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"
                android:text="@string/filter_years"
                android:textSize="13sp"/>

        </LinearLayout>
    </LinearLayout>

        <ListView
            android:id="@+id/artwork_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />


</LinearLayout>